[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Gun.gd" type="Script" id=1]

[node name="Gun" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="GunSprite" type="Sprite" parent="."]
z_index = 3

[node name="ReloadTimer" type="Timer" parent="."]

[node name="FirerateTimer" type="Timer" parent="."]
